# node

./: .cargo  .dockerignore  .dprint.json  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt-b.toml  Cargo.toml  Makefile  README.dev.md  README.md  RELEASE_NOTES.md  cumulus_patch.sh  docker-compose-build.yml  docker-compose.yml  package-lock.json  package.json  patches_config.sh  patches_top_config.sh  pkgs.nix  quick_net.sh  shell.nix  symlink_aws_fix.sh
cumulus/client/consensus/common/src/: parachain_consensus.rs.patch
docker/: chainspec.Dockerfile  cicd.Dockerfile  polkadot.Dockerfile  runner.Dockerfile
docker/chainspec/: airdrop.js  cmd.js  exec.js  index.js  insert_keys.js  package.json  para_index.js
docker/distributor/: index.js  package.json  test.js
docker/nix/: shell.nix
docker/scripts/: build_chainspec.sh  start_collator.sh  start_collator_local.sh  start_relay.sh  start_relay_local.sh
docker/scripts/nix/: pkgs.nix  shell.nix
docker1/: polkadot.Dockerfile
docker1/chainspec/: exec.js  index.js  insert_keys.js  para_index.js
docker1/scripts/: build_chainspec.sh  build_polkadot.sh  git.sh  start_collator.sh  start_polkadot.sh
infrastructure/: README.md  buildspec.yml  buildspec_airdrop.yml  deploy-collator-slave.yml  deploy-collator.yml  deploy-relay-slave.yml  deploy-relay.yml  non-prod-artifact-access-policy.json  rio-node-cluster.yml  rio-node-ecr.yml  rio-node-pipeline.yaml  rio-node-role-update.yaml  rio-node-role.yaml  rio-policy.json  todo-bucket-perms.json
node/: Cargo.toml  Cargo.toml.patch  patches_config.sh
node/relaychain-rio/: Cargo.toml
node/relaychain-rio-cli/: Cargo.toml.patch  build.rs  patches_config.sh
node/relaychain-rio-cli/src/: cli.rs  command.rs.patch  error.rs  host_perf_check.rs  lib.rs
node/relaychain-rio-client/: Cargo.toml.patch  patches_config.sh  src
node/relaychain-rio-service/: Cargo.toml.patch  patches_config.sh
node/relaychain-rio-service/src/: chain_spec.rs.patch  grandpa_support.rs  lib.rs  overseer.rs  parachains_db  relay_chain_selection.rs  tests.rs  tests.rs.patch
node/relaychain-rio/src/: main.rs
node/src/: chain_spec.rs  chain_spec.rs.patch  cli.rs  cli.rs.patch  command.rs  command.rs.patch  main.rs  main.rs.patch  rpc.rs  rpc.rs.patch  service.rs  service.rs.patch
pallets/assets/: .rustfmt.toml  Cargo.toml  Cargo.toml.patch  patches_config.sh
pallets/assets-ext/: Cargo.toml
pallets/assets-ext/src/: lib.rs
pallets/assets/src/: imbalances.rs  impls.rs  lib.rs  lib.rs.patch  mock.rs  mock.rs.patch  tests.rs  tests.rs.patch  tests_currency_adapter.rs  tests_currency_adapter.rs.patch  tests_events.rs  tests_fungibles.rs  tests_fungibles.rs.patch  tests_multicurrency.rs  tests_multicurrency.rs.patch  types.rs  weights.rs  weights.rs.patch
pallets/gateway/: Cargo.toml
pallets/gateway/rpc/: Cargo.toml
pallets/gateway/rpc/runtime-api/: Cargo.toml
pallets/gateway/rpc/runtime-api/src/: lib.rs
pallets/gateway/rpc/src/: lib.rs
pallets/gateway/src/: lib.rs  types.rs  weight_info.rs
pallets/gateway/src/tests/: mock.rs  tests.rs
pallets/staking-pool/: .rustfmt.toml  Cargo.toml
pallets/staking-pool/src/: benchmarking.rs  lib.rs  mock.rs  weight_info.rs
pallets/staking-pool/src/tests/: claim_fees.rs  create_new_strategy.rs  deposit_to_stake.rs  mod.rs  set_claiming_fee_percent.rs  set_unstaking_time.rs  stake_for_user.rs  unstake.rs
pallets/transaction-payment/: .rustfmt.toml  Cargo.toml.patch  patches_config.sh
pallets/transaction-payment/rpc/: Cargo.toml.patch  patches_config.sh
pallets/transaction-payment/rpc/runtime-api/: Cargo.toml.patch  patches_config.sh
pallets/transaction-payment/rpc/runtime-api/src/: lib.rs
pallets/transaction-payment/rpc/src/: lib.rs
pallets/transaction-payment/src/: lib.rs  payment.rs  types.rs
patches_cmds/: apply.sh  change_version.sh  cumulus_gen.sh  frontier_gen.sh  make_single_branch.sh  make_symlinks_aws_fix.sh  subdir_apply_all.sh  submodules_update.sh  update.sh
precompiles/assets-erc20/: Cargo.toml  Cargo.toml.patch  ERC20.sol  patches_config.sh
precompiles/assets-erc20/src/: lib.rs  lib.rs.patch  mock.rs  mock.rs.patch  tests.rs  tests.rs.patch
precompiles/utils/: Cargo.toml.patch  macro  patches_config.sh  src
primitives/base/: Cargo.toml
primitives/base/src/: lib.rs  macros.rs  traits.rs  types.rs
primitives/protocol/: Cargo.toml
primitives/protocol/src/: lib.rs
primitives/support/: Cargo.toml
primitives/support/src/: rlog.rs  traits.rs
proc-macro/: .rustfmt.toml  Cargo.toml
proc-macro/src/: lib.rs  pallet_module_impl.rs  pallet_storage.rs  syntax.rs  typelevel.rs
proc-macro/tests/: test01.rs
runtime/: Cargo.toml  Cargo.toml.patch
runtime/common-rio/: Cargo.toml.patch  patches_config.sh  slot_range_helper  src
runtime/relaychain-rio/: Cargo.toml.patch  build.rs  patches_config.sh
runtime/relaychain-rio/constants/: Cargo.toml.patch
runtime/relaychain-rio/constants/src/: lib.rs.patch  weights
runtime/relaychain-rio/src/: bag_thresholds.rs  lib.rs.patch  weights
runtime/src/: lib.rs  lib.rs.patch  precompiles.rs
scripts/: patches_apply.sh  patches_update.sh
