[profile.release]
panic = "unwind"

[workspace]
members = [
  "cumulus/client/cli",
  "cumulus/client/collator",
  "cumulus/client/consensus/aura",
  "cumulus/client/consensus/common",
  "cumulus/client/consensus/relay-chain",
  "cumulus/client/network",
  "cumulus/client/pov-recovery",
  "cumulus/client/relay-chain-inprocess-interface",
  "cumulus/client/relay-chain-interface",
  "cumulus/client/relay-chain-rpc-interface",
  "cumulus/client/service",
  "cumulus/primitives/parachain-inherent",
  "node",
  #	"node/relaychain-rio",
  "node/relaychain-rio-cli",
  "node/relaychain-rio-client",
  "node/relaychain-rio-service",
  "pallets/assets",
  "pallets/assets-ext",
  "pallets/staking-pool",
  "proc-macro",
  "runtime",
  "runtime/common-rio",
  "runtime/relaychain-rio",
]
