[package]
name = "parachain-rio"
version = "0.1.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
repository = "https://github.com/paritytech/cumulus/"
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."

[[bin]]
name = "parachain-rio"
path = "src/main.rs"

[dependencies]
# Third party
clap = { version = "3.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
derive_more = "0.99.2"
futures = "0.3.21"
hex-literal = "0.3.4"
jsonrpsee = { version = "0.13.1", features = ["server"] }
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }

# Local
parachain-rio-runtime = { path = "../runtime" }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-transaction-payment-rpc = { package = "rpallet-transaction-payment-rpc", path = "../pallets/transaction-payment/rpc" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.24" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.24" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.24" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

# Polkadot
polkadot-cli = { package = "relaychain-rio-cli", path = "relaychain-rio-cli", features = ["kusama-native", "westend-native", "rococo-native"] }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-service = { package = "relaychain-rio-service", path = "relaychain-rio-service", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.24" }

# Cumulus
cumulus-client-cli = { path = "../cumulus/client/cli" }
cumulus-client-collator = { path = "../cumulus/client/collator" }
cumulus-client-consensus-aura = { path = "../cumulus/client/consensus/aura" }
cumulus-client-consensus-common = { path = "../cumulus/client/consensus/common" }
cumulus-client-network = { path = "../cumulus/client/network" }
cumulus-client-service = { path = "../cumulus/client/service" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.24" }
cumulus-primitives-parachain-inherent = { path = "../cumulus/primitives/parachain-inherent" }
cumulus-relay-chain-inprocess-interface = { path = "../cumulus/client/relay-chain-inprocess-interface" }
cumulus-relay-chain-interface = { path = "../cumulus/client/relay-chain-interface" }
cumulus-relay-chain-rpc-interface = { path = "../cumulus/client/relay-chain-rpc-interface" }

# Frontier dependencies
fc-consensus = { path = "../frontier/client/consensus" }
fc-db = { path = "../frontier/client/db" }
fc-mapping-sync = { path = "../frontier/client/mapping-sync" }
fc-rpc = { path = "../frontier/client/rpc", features = ["rpc_binary_search_estimate"] }
fc-rpc-core = { path = "../frontier/client/rpc-core" }
fp-consensus = { path = "../frontier/primitives/consensus" }
fp-evm = { path = "../frontier/primitives/evm" }
fp-rpc = { path = "../frontier/primitives/rpc" }
fp-storage = { path = "../frontier/primitives/storage" }
pallet-ethereum = { path = "../frontier/frame/ethereum" }
pallet-evm = { path = "../frontier/frame/evm" }

# Rio
rp-protocol = { path = "../primitives/protocol", default-features = false }
rpallet-assets = { path = "../pallets/assets", default-features = false }
rpallet-gateway = { path = "../pallets/gateway", default-features = false }
rio-gateway-rpc = { path = "../pallets/gateway/rpc", default-features = false }
rio-gateway-rpc-runtime-api = { path = "../pallets/gateway/rpc/runtime-api", default-features = false }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
default = []
runtime-benchmarks = [
  "parachain-rio-runtime/runtime-benchmarks",
  "polkadot-cli/runtime-benchmarks",
]
try-runtime = ["parachain-rio-runtime/try-runtime", "polkadot-cli/try-runtime"]

fast-runtime = ["parachain-rio-runtime/fast-runtime", "polkadot-cli/fast-runtime"]

rio-testnet = ["polkadot-cli/rio-testnet"]
runtime-metrics = ["polkadot-cli/runtime-metrics"]
pyroscope = ["polkadot-cli/pyroscope"]
staging-client = ["polkadot-cli/staging-client"]
