[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
repository = "https://github.com/paritytech/cumulus/"
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }

# Local
parachain-template-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-cli = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-client-api = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-consensus = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-executor = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-network = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-network-common = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-rpc = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-service = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-tracing = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-api = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-keystore = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-offchain = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-session = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true, "branch" = "polkadot-v0.9.37" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", features = ["rococo-native", "fast-runtime"] }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }

# Cumulus
cumulus-client-cli = { path = "../cumulus/client/cli" }
cumulus-client-consensus-aura = { path = "../cumulus/client/consensus/aura" }
cumulus-client-consensus-common = { path = "../cumulus/client/consensus/common" }
cumulus-client-network = { path = "../cumulus/client/network" }
cumulus-client-service = { path = "../cumulus/client/service" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-primitives-parachain-inherent = { path = "../cumulus/primitives/parachain-inherent" }
cumulus-relay-chain-interface = { path = "../cumulus/client/relay-chain-interface" }

# Frontier dependencies
fc-consensus = { path = "../frontier/client/consensus" }
fc-db = { path = "../frontier/client/db" }
fc-mapping-sync = { path = "../frontier/client/mapping-sync" }
fc-rpc = { path = "../frontier/client/rpc" }
fc-rpc-core = { path = "../frontier/client/rpc-core" }
fp-consensus = { path = "../frontier/primitives/consensus" }
fp-evm = { path = "../frontier/primitives/evm" }
fp-rpc = { path = "../frontier/primitives/rpc" }
fp-storage = { path = "../frontier/primitives/storage" }
pallet-ethereum = { path = "../frontier/frame/ethereum" }
pallet-evm = { path = "../frontier/frame/evm" }

rpallet-assets = { path = "../pallets/assets", default-features = false }
rpallet-gateway = { path = "../pallets/gateway", default-features = false }
rp-base = { path = "../primitives/base", default-features = false }
rp-protocol = { path = "../primitives/protocol", default-features = false }
rp-support = { path = "../primitives/support", default-features = false }


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.37" }

[features]
default = []
runtime-benchmarks = [
  "try-runtime-cli/try-runtime",
  "parachain-template-runtime/runtime-benchmarks",
  "polkadot-cli/runtime-benchmarks",
]
try-runtime = [
  "try-runtime-cli/try-runtime",
  "parachain-template-runtime/try-runtime",
]

fast-runtime = ["parachain-template-runtime/fast-runtime", "polkadot-cli/fast-runtime"]
