[package]
name = "rio-proc-macro"
version = "0.1.0"
authors = ["Zhukov Evgeni <zhukov@riodefi.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
frame-support-procedural = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
proc-macro2 = { version = "1.0.26" }
quote = "1.0.9"
regex = "1.5.4"
syn = { version = "1.0.74", features = ["full", "visit", "visit-mut", "parsing"] }
