[package]
name = "relaychain-rio"
version = "0.9.22"
authors = ["RioDefi"]
description = "Rio Relay-chain Client Node Bin"
edition = "2021"

[dependencies]
polkadot-cli = { package = "relaychain-rio-cli", path = "../relaychain-rio-cli", features = [ "kusama-native", "westend-native", "rococo-native" ]  }
color-eyre = { version = "0.6.1", default-features = false }

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
pyroscope = ["polkadot-cli/pyroscope"]
staging-client = ["polkadot-cli/staging-client"]

