[package]
name = "relaychain-rio"
version = "0.9.24"
authors = ["RioDefi"]
edition = "2021"
description = "Rio Relay-chain Client Node Bin"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
polkadot-cli = { package = "relaychain-rio-cli", path = "../relaychain-rio-cli", features = ["kusama-native", "westend-native", "rococo-native"] }

[features]
runtime-benchmarks = ["polkadot-cli/runtime-benchmarks"]
try-runtime = ["polkadot-cli/try-runtime"]
fast-runtime = ["polkadot-cli/fast-runtime"]
rio-testnet = ["polkadot-cli/rio-testnet"]
runtime-metrics = ["polkadot-cli/runtime-metrics"]
pyroscope = ["polkadot-cli/pyroscope"]
staging-client = ["polkadot-cli/staging-client"]
