[package]
name = "rpallet-assets-ext"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
bitmask = { version = "0.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }

# substrate runtime module
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# rio
rpallet-assets = { path = "../assets", default-features = false }
scale-info = { version = "2.1.2", features = ["derive"], default-features = false }
serde = { version = "1.0", optional = true }

# substrate
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "bitmask/std",

  "sp-std/std",
  "sp-runtime/std",

  "frame-support/std",
  "frame-system/std",

  "rpallet-assets/std",
]
