[package]
name = "rpallet-assets"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
# orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "27e3272d322dcdd915f0fc2002032e8d53a46523", version = "0.4.1-dev", default-features = false }

orml-traits = { path = "../../subm/orml/traits", default-features = false }

bitmask = { version = "0.5.0", default-features = false }
rp-base = { path = "../../primitives/base", default-features = false }
rp-protocol = { path = "../../primitives/protocol", default-features = false }
rp-support = { path = "../../primitives/support", default-features = false }

[dev-dependencies]
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "bitmask/std",
  # "rp-base/std",
  # "rp-protocol/std",
  # "rp-support/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
